syntax = "proto3";

package messagingService;

option go_package = "messagingpb";

option java_package = "com.jjrobot.andy4.messagingpb";
option java_outer_classname = "MessagingServicePB";

// messagingService.MessagingService 消息服务
//
// 用于扩展内部应用的消息通信广播
service MessagingService {
    // Messaging 消息的发布与订阅方法
    rpc Messaging(stream MessagingRequest) returns(stream MessagingResponse) {}
}

// 订阅消息类型
message Subscribe {
    // 订阅的主题列表
    repeated string topics = 1;
}

// 取消订阅消息类型
message Unsubscribe {
    // 取消订阅的主题列表
    repeated string topics = 1;
}

// 消息类型
message MessagePublish {
    // 数据发布的主题列表
    repeated string topics = 1;
    // 消息内容
    bytes payload = 2;
}

message MessagingRequest {
    // 消息类型oneof
    oneof messaging_oneof {
        Subscribe subscribe = 1;
        Unsubscribe unsubscribe = 2;
        MessagePublish message_publish = 3;
    }
}

message MessagingResponse {
    // 消息主题
    string topic = 1;
    // 消息内容
    bytes payload = 2;
}
